syntax = "proto3";

option go_package = "github.com/SunSince90/kube-scraper-telegram-bot/listenerserv";

package telegramlistener;

service TelegramListener {
    // Obtains the feature at a given position.
    rpc SendMessage(TelegramMessage) returns (TelegramResponse) {}
}

// TelegramMessage is the message that must be sent
message TelegramMessage {
    int64 dest = 1;
    string msg = 2;
}

// TelegramResponse represents the result of the call
message TelegramResponse {
    int32 code = 1;
    string resp = 2;
}